# IC_grupo2_projecto2

./: .gitignore  Bitstream.cpp  Bitstream.h  CMakeLists.txt  GolombCode.cpp  README.md  bitstreamtest.cpp  main.cpp
Audio_work/: AudioGolomb.cpp  Bitstream.cpp  Bitstream.h  CMakeLists.txt  audioTest  main.cpp  outAudioFile
Audio_work/headers/: Bitstream.h
Audio_work/scripts/: testAudio.sh
GolombCodeFiles/: golombencoded.txt
Images_work/: GolombCode.cpp  main.cpp
Images_work/scripts/: testImages.sh
headers/: GolombCode.h
scripts/: testImages.sh
tests/: Golombtest.cpp  bitstreamtest.cpp
