cmake_minimum_required(VERSION 3.15)
project(audioTest)
include(CTest)
enable_testing()
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(audioTest main.cpp AudioGolomb.cpp ../../Bitstream.cpp)
target_link_libraries(audioTest ${OpenCV_LIBS})
